# wow-launcher

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
src/: App.vue  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AccountOutlineIcon.vue  AddonCard.vue  Addons.vue  Button.vue  CardFull.vue  CardList.vue  ChevronDown.vue  DropdownMenu.vue  Layout.vue  Link.vue  LoadingLoopIcon.vue  PlayIcon.vue  ProgressBar.vue  RoundCheckIcon.vue  ServerStatus.vue  Titlebar.vue  UsersIcon.vue
