[package]
name = "sirus-next"
version = "1.3.1"
description = "Sirus Next Launcher"
authors = ["Nikolay Kost <jilizart@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-maximize", "window-unminimize", "window-unmaximize", "window-minimize", "system-tray", "protocol-all", "http-all", "macos-private-api", "window-hide", "window-close", "window-start-dragging", "window-show", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
